--- a/packages/react/src/components/form/Radio/Radio.module.css
+++ b/packages/react/src/components/form/Radio/Radio.module.css
@@ -1,7 +1,5 @@
 .container {
   position: relative;
-  min-width: 44px;
-  min-height: 44px;
 }
 
 .spacing {
@@ -11,15 +9,15 @@
 .icon {
   grid-area: input;
   pointer-events: none;
-  height: 1.75em;
-  width: 1.75em;
+  width: var(--fds-sizing-6);
+  height: var(--fds-sizing-6);
   margin: auto;
   overflow: visible;
 }
 
 .label {
   padding-left: 3px;
-  min-height: 44px;
+  min-height: 2.3em;
   min-width: min-content;
   display: inline-flex;
   flex-direction: row;
@@ -42,12 +40,42 @@
   position: absolute;
   left: 0;
   top: 0;
-  min-width: 44px;
-  min-height: 44px;
+  width: var(--fds-sizing-10);
+  height: var(--fds-sizing-10);
   display: inline-grid;
   grid: [input] 1fr / [input] 1fr;
   gap: var(--fds-spacing-2);
   grid-auto-flow: column;
+}
+
+.container.small {
+  min-width: var(--fds-sizing-8);
+  min-height: var(--fds-sizing-8);
+}
+
+.container.medium {
+  min-width: var(--fds-sizing-10);
+  min-height: var(--fds-sizing-10);
+}
+
+.container.large {
+  min-width: var(--fds-sizing-12);
+  min-height: var(--fds-sizing-12);
+}
+
+.container.small .control {
+  width: var(--fds-sizing-8);
+  height: var(--fds-sizing-8);
+}
+
+.container.medium .control {
+  width: var(--fds-sizing-10);
+  height: var(--fds-sizing-10);
+}
+
+.container.large .control {
+  width: var(--fds-sizing-12);
+  height: var(--fds-sizing-12);
 }
 
 .radio,
